tests/typing/good/testfile-shadowing-1.hs
main = let error x = x in putChar (error '\n')
