tests/typing/bad/testfile-duplicate-3.hs

f = \ x x -> 42
main = putChar '\n'
